syntax = "proto3";

package p2p_agent;

option go_package = "./pkg/pb";

service FilesNodeService {
  rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse);
  rpc DownloadFile(DownloadFileRequest) returns (stream DownloadFileResponse);
  rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
}

// Message for file upload request
message UploadFileRequest {
  // File metadata
  string fileName = 1;
  bytes chunkData = 2;
}

// Message for file upload response
message UploadFileResponse {
  string fileId = 1;
  int64 fileSize =2;
  bool success = 3;
  string message = 4;
}



message DownloadFileRequest {
  string fileId = 1;
}

message DownloadFileResponse {
  bytes chunk = 1;
  string fileId = 2;
  bool exists = 3;
  int64 chunkSize = 4;
}

message DeleteFileRequest {
  string fileId = 1;
}

message DeleteFileResponse {
  string fileId = 1;
}


message AuthenticateRequest{
  string username = 1;
  string password = 2;
}

message AuthenticateResponse{
  string token = 1;
}